# magic-stack

./: .CLAUDEWAKEUP  .apptree  .autobot_mission_complete.md  .connectvps  .contexte  .cursorrules  .dual_sync_report.md  .dualclaude  .dualclaude_status  .dualgpt  .dualorg  .dualstatus  .final_alice_system_ready.md  .gitattributes  .gitignore  .gitignore.vps  .gpt_sync_continue.md  .gpt_todo_main.md  .htmlstruct  .map  .merlindirect  .ports  .services  .session_notes_vincent.md  .sitemap  .tree  .vincent  .vincent_todo_berenice.md  .vpshowto  .wakeup_claude  .wakeup_gpt  .wakeup_scribe  00_REBOOT_CLAUDE.md  00_SESSION_CLAUDE.md  0_PORTS_QUI_FAIT_QUOI.md  1_ARCHITECTURE_COMPLETE_ASCII.md  2_WORKFLOW_QUOTIDIEN.md  3_COMMANDES_ESSENTIELLES.md  4_PROBLEMES_SOLUTIONS.md  5_RELEASE_CHECKLIST.md  (+324 more)
.ssh/: hot_cursor_ed25519  hot_cursor_ed25519.pub
ANSIBLE/: CONSEILS_MERLIN_GOAP_INTEGRATION.md  EXPLICATION_SIMPLE_GOAP_POUR_JEAN.md  IMPLEMENTATION_GOAP_MAISON_POUR_JEAN.md  INTEGRATION_SURFACE_VECTOR_6D.md  QUESTIONS_CLARIFICATION_SURFACE.md  README.md  VectorCaveClient.ts  ansible-status.sh
ARCHIVE_DOCS_ANCIENNES/: README_ARCHIVAGE.md
BACKUP_JOUR35/: AI_PERSONALITIES_SYSTEM.md  CLARIFICATION_SYSTEMES_CLIPPY.md  CLIPPY_MODE_DEV_PLAN.md  test_clippy_client.sh
BALLON_CUBE/: ARCHITECTURE_MAP.html  CARTE_RESTAURATIONS.md  ETAT_SUBSTRAT_COMPLET.md  EXCALIBUR_RESONANCE.md  GUIDE_INTERFACES.md  INTEGRATION_REPORT.md  PORTAL_CENTRAL.html  PORTAL_CENTRAL_V2.html  PROGRESS_SUMMARY_70_PERCENT.md  SESSION_PROGRESS_JOUR44.md  SESSION_SUMMARY_JOUR43.md  VECTOR_DB_STORAGE_EXPLANATION.md  excalibur_portal.html  restoration_map.html
backends/rust/: Cargo.toml  LANCE_RUST_RESISTANT.sh  RUN_ALL.sh  explorer.html  test_all_formulas.sh.backup-20250807-164632  vector_bridge.py
backends/rust/src/: geometry_v2.rs  java_connector.rs  lib.rs  main.rs  mapgen.rs  multiplayer_v2.rs  multiplayer_v2_complete.rs  pathfinding.rs  position_6d.rs  resources_api.rs  vector_ops.rs  world_state.rs
docs/: API.md  (+47 more)
rust_backend/: Cargo.toml
rust_backend/src/: main.rs
rust_backend/src/handlers/: mod.rs
rust_backend/src/models/: mod.rs
rust_backend/src/services/: mod.rs
(+4386 files in other folders)
