[package]
name = "avalon-magic-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
axum = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", default-features = false, features = ["json"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
clap = { version = "4.0", features = ["derive"] }
env_logger = "0.10"
log = "0.4"
chrono = { version = "0.4", features = ["serde"] }

[dependencies.tower]
version = "0.4"
features = ["util"]

[dependencies.tower-http]
version = "0.5"
features = ["cors", "trace"]
