[package]
name = "magic-stack-core"
version = "0.1.0"
edition = "2021"
description = "High-performance Rust core for Magic Stack critical operations"
authors = ["URZ-KÔM <urz-kom@avalon.institute>"]

[dependencies]
# Async runtime for high-performance I/O
tokio = { version = "1.0", features = ["full"] }

# Web framework for API endpoints
axum = "0.7"

# Serialization for JSON API
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# CORS middleware for browser access
tower-http = { version = "0.5", features = ["cors"] }

# High-performance data structures
rayon = "1.7"          # Data parallelism
ndarray = "0.15"       # N-dimensional arrays for 6D math
nalgebra = "0.32"      # Linear algebra

# Pathfinding for Q* algorithm
pathfinding = "4.0"

# Memory mapping for fast I/O
memmap2 = "0.9"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# HTTP client for Java backend communication
reqwest = { version = "0.11", features = ["json"] }

# UUID generation
uuid = { version = "1.0", features = ["v4"] }

# Error handling
thiserror = "1.0"
rand = "0.8"
rand_chacha = "0.3"

# Hashing for trace_hash
sha2 = "0.10"

[lib]
name = "magic_stack_core"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "magic-stack-server"
path = "src/main.rs"

[profile.release]
# Optimize for speed - critical for Q* algorithm
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"